fix: fixed a bug where the title would overflow for very small viewport widths

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ header {
 header h1 {
   margin: auto;
   padding: 1rem;
+  overflow: hidden;
 }
 header h1 a {
   color: #fff;
@@ -343,6 +344,12 @@ nav{
 }
 
 /* ====================== Media Query Breakpoints ====================== */
+@media screen and (max-width:450px){
+  header h1 {
+    font-size: 1.15em;
+  }
+}
+
 @media screen and (max-width:550px){
   #map{
     height: 60vh;
@@ -367,6 +374,7 @@ nav{
   #menu{
     display: block;
   }
+
 }
 
 @media screen and (min-width:650px){
